[package]
name = "glytex"
version = "0.2.27"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
minotari_app_grpc = { git = "https://github.com/tari-project/tari", tag = "v2.0.0-alpha.2" }
num-format = "0.4.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

tari_common = { git = "https://github.com/tari-project/tari", tag = "v2.0.0-alpha.2" }
tari_common_types = { git = "https://github.com/tari-project/tari", tag = "v2.0.0-alpha.2" }
tari_core = { git = "https://github.com/tari-project/tari", tag = "v2.0.0-alpha.2", default-features = false, features = [
  "transactions",
  "base_node",
] }

tari_shutdown = { git = "https://github.com/tari-project/tari.git", tag = "v2.0.0-alpha.2" }
tari_utilities = "0.8"

libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }

rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls-webpki-roots"] }

axum = "0.7.5"
cust = { version = "0.3.2", optional = true }
log = "0.4.22"
log4rs = "1.3.0"
# Keep at 0.9.5 as upgrading breaks detection of some gpus
opencl3 = { version = "0.9.5", optional = true }
thiserror = "1.0.63"
metal = { version = "0.31.0", optional = true }
anyhow = "1.0.95"

[features]
default = []
nvidia = ["dep:cust"]
metal = ["dep:metal"]
opencl = ["dep:opencl3"]

[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys", "log4rs"]
